# mining-association-rules

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  comparisons.py  config.py  example_config.json  example_usage.py  example_usage2.py  libraries_comparison.ipynb  main.py  pyproject.toml  requirements.txt  setup.cfg
apriori_df/apriori/: apriori.py  attractiveness_measures.py  itemsets.py
apriori_df/sources/: 1.csv  book_example.csv
apriori_list/apriori/: apriori.py  attractiveness_measures.py  itemsets.py
apriori_list/sources/: data.py  read_csv.py
common/apriori/: apriori.py  attractiveness_measures.py  itemsets.py  rules.py
common/utils/: consts.py  csv_to_df.py  enums.py  exceptions.py  read_csv.py
junk/: database_generator.py
requirements/: base.txt  local.txt  mgr.txt
sources/: survey.csv  survey.parquet
sources/raw/: groceries.csv
src/mar/apriori_df/apriori/: __init__.py  apriori.py
src/mar/apriori_df/interest_measures/: __init__.py  anti_support.py  base.py  batch_anti_support.py  batch_confidence.py  batch_conviction.py  batch_dependency_factor.py  batch_gain_function.py  batch_hyper_confidence.py  batch_hyper_lift.py  batch_lift.py  batch_rule_interest_function.py  batch_support.py  batch_support_count.py  confidence.py  conviction.py  dependency_factor.py  gain_function.py  hyperconfidence.py  hyperlift.py  lift.py  rule_interest_function.py  support.py  support_count.py
src/mar/apriori_list/apriori/: apriori.py
src/mar/common/apriori/: apriori.py
src/mar/common/utils/: consts.py  csv_to_df.py  enums.py  exceptions.py  loggers.py  measures.py  protocols.py  read_csv.py  runners.py  typed_dicts.py
src/mining_association_rules/apriori_df/apriori/: apriori.py
src/mining_association_rules/apriori_df/interest_measures/: __init__.py  anti_support.py  base.py  batch_confidence.py  batch_support.py  confidence.py  conviction.py  dependency_factor.py  gain_function.py  hyperconfidence.py  hyperlift.py  lift.py  rule_interest_function.py  support.py  support_count.py
src/mining_association_rules/apriori_list/apriori/: apriori.py
src/mining_association_rules/common/apriori/: apriori.py
src/mining_association_rules/common/utils/: consts.py  csv_to_df.py  encoders.py  loggers.py  measures.py  protocols.py  read_csv.py  runners.py  typed_dicts.py
src/tests/: conftest.py
src/tests/test_apriori_df/: test_anti_support.py  test_support.py
