[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "mining-association-rules"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">= 3.8"
authors = [
    {name = "Michał Piekarski", email = "egzosted@gmail.com"}
]
description = "Package for generating association rules."
readme = "README.md"
keywords = ["association rules", "apriori", "frequent itemsets"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/michalpiekarski777/mining-association-rules"
Repository = "https://github.com/michalpiekarski777/mining-association-rules.git"
Issues = "https://github.com/michalpiekarski777/mining-association-rules/issues"

[tool.hatch.dynamic]
dependencies = {file = ["requirements/base.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.flake8]
max-line-length = 120
exclude = ".git,venv"

[tool.isort]
line_length = 120
skip = "venv/"
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
